--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -19,6 +19,14 @@
     #page-home main{
         align-items: center;
     }
+
+    #page-search-resolt .cards {
+        grid-template-columns: 1fr;
+    }
+
+    #page-search-resolt .cards img{
+        height: 250px;
+    }
 }
 
 /* largura mínima da tela, quando for menor que 1700 faça: */
